...
    _notificationBloc = BlocProvider.of(context);
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: Text('Home')),
      body: Container(
        padding: EdgeInsets.all(8),
        child: Center(
          child: Column(
            children: <Widget>[
              Text('HomeView'),
...
                    title: 'my title',
                    message: 'hello message',
                  ));
                },
              ),
              RaisedButton(
                child: Text('Logout'),
                onPressed: () {
                  _applicationBloc.add(ApplicationEventUserLogOut());
                },
              ),
            ],
          ),
...
